Fix for button styling on mobile

--- a/src/Pages/PokemonListingPage.module.css
+++ b/src/Pages/PokemonListingPage.module.css
@@ -9,7 +9,6 @@
 
 .button-container {
     width: 100%;
-    padding: 1rem;
     display: flex;
     justify-content: space-between;
 }
@@ -21,7 +20,6 @@
     align-items: center;
     font-size: 1.5rem;
     font-weight: bold;
-    padding: 1rem 2rem 1rem 2rem;
     color: white;
     border: solid 4px black;
     border-radius: 4px;
@@ -34,4 +32,24 @@
     border-radius: 50%;
     height: 60px;
     border: solid 4px black;
+}
+
+@media screen and (min-width: 768px) {
+    .button-container {
+        padding: .5rem;
+    }
+
+    .button-container button {
+        padding: 1rem 2rem 1rem 2rem;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .button-container {
+        padding: .3rem;
+    }
+
+    .button-container button {
+        padding: 1rem;
+    }
 }
